# instruction-reviewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  secret_scan_fixture.txt
.github/: instruction-rules.example.json
.github/workflows/: instruction-review.yml  release.yml  self-review.yml  smoke.yml  test.yml
docs/: CASE_STUDY.md
reviewer/: __init__.py  __main__.py  checks.py  cli.py  default-rules.json  diff.py  instructions.py  llm_check.py  rules.py
reviewer/reporters/: __init__.py  github.py  json_report.py  markdown.py
tests/: conftest.py  test_action.py  test_anthropic_smoke.py  test_checks.py  test_cli.py  test_diff.py  test_github_reporter.py  test_markdown_reporter.py  test_rules.py
